// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/agree/demo/basic.md correctly 1`] = `
<div
  class="m-agree agree-demo m-agree-checked"
>
  <div
    class="m-agree-icon"
  >
    <i
      class="m-icon m-icon-check-circle"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="check-circle"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm260.3 356.4L412.8 717.1l-.4.4c-2.4 2.6-5.3 4.9-8.5 6.7-5.6 3.2-11.8 4.7-17.8 4.7-12.5 0-24.7-6.5-31.3-18.2L245.9 520.3C236 503 242 481 259.3 471.2c17.3-9.9 39.3-3.9 49.1 13.4l85.4 149.5 327.5-328.5c14-14.1 36.8-14.1 50.9-.1 14.1 14.1 14.1 36.9.1 50.9z"
        />
      </svg>
    </i>
  </div>
  <div
    class="m-agree-content"
  >
    本人承诺投保人已充分了解本保险产品，并保证投保信息的真实性，理解并同意
  </div>
</div>
`;

exports[`renders ./components/agree/demo/disabled.md correctly 1`] = `
<div>
  <div
    class="m-agree agree-demo m-agree-checked"
  >
    <div
      class="m-agree-icon"
    >
      <i
        class="m-icon m-icon-check-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="check-circle"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm260.3 356.4L412.8 717.1l-.4.4c-2.4 2.6-5.3 4.9-8.5 6.7-5.6 3.2-11.8 4.7-17.8 4.7-12.5 0-24.7-6.5-31.3-18.2L245.9 520.3C236 503 242 481 259.3 471.2c17.3-9.9 39.3-3.9 49.1 13.4l85.4 149.5 327.5-328.5c14-14.1 36.8-14.1 50.9-.1 14.1 14.1 14.1 36.9.1 50.9z"
          />
        </svg>
      </i>
    </div>
    <div
      class="m-agree-content"
    >
      本人承诺投保人已充分了解本保险产品，并保证投保信息的真实性，理解并同意
    </div>
  </div>
  <div
    class="m-agree agree-demo m-agree-disabled"
  >
    <div
      class="m-agree-icon"
    >
      <i
        class="m-icon m-icon-check-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="check-circle"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm260.3 356.4L412.8 717.1l-.4.4c-2.4 2.6-5.3 4.9-8.5 6.7-5.6 3.2-11.8 4.7-17.8 4.7-12.5 0-24.7-6.5-31.3-18.2L245.9 520.3C236 503 242 481 259.3 471.2c17.3-9.9 39.3-3.9 49.1 13.4l85.4 149.5 327.5-328.5c14-14.1 36.8-14.1 50.9-.1 14.1 14.1 14.1 36.9.1 50.9z"
          />
        </svg>
      </i>
    </div>
    <div
      class="m-agree-content"
    >
      本人承诺投保人已充分了解本保险产品，并保证投保信息的真实性，理解并同意
    </div>
  </div>
</div>
`;
